tests/lean/structure_instance_bug3.lean.expected.out
structure_instance_bug3.lean:1:23: error: invalid structure value { ... }, field 'id_map' was not provided
structure_instance_bug3.lean:1:23: error: invalid structure value { ... }, field 'pure' was not provided
structure_instance_bug3.lean:1:23: error: invalid structure value { ... }, field 'bind' was not provided
structure_instance_bug3.lean:1:23: error: invalid structure value { ... }, field 'pure_bind' was not provided
structure_instance_bug3.lean:1:23: error: invalid structure value { ... }, field 'bind_assoc' was not provided
structure_instance_bug3.lean:1:23: error: unexpected field 'map_pure'
given field value
  λ (α β : Type ?) (g : α → β) (x : α), eq.trans (eq.symm (?m_1 g (⁇ α x))) (⁇ α β x (⁇ β ∘ g))
expected field value
  ?m_1
