tests/lean/structure_instance_bug3.lean
example : lawful_monad set := {}
